# routex-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  runtime.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
src/tools/: mod.rs  web_search.rs
