[package]
name = "routex-rs"
version = "0.1.0"
edition = "2024"
description = "A lightweight AI agent runtime for Rust"
license= "MIT"
repository = "https://github.com/Ad3bay0c/routex-rs"
readme = "README.md"

[lib]
name = "routex"
path = "src/lib.rs"

[[bin]]
name = "routex"
path = "bin/routex.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"    # flexible errors for application code
thiserror = "2" # structured errors for library code

# CLI
clap = { version = "4", features = ["derive"] }

async-trait = "0.1"
urlencoding = "2"
futures = "0.3"
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"
